--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
   --secondary-color: #313131;
   --font-color: white;
   --text-font: "Montserrat", sans-serif;
+  --highlight-color: #c1c1c1;
 }
 
 body {
@@ -154,4 +155,62 @@ a {
 
 .hel-ig {
   padding: 10px;
+}
+
+/* home page*/
+
+/* about me page*/
+
+.about-box {
+  max-width: 300%;
+  margin-left: 700px;
+}
+.title {
+  font-size: 40px;
+  font-weight: bold;
+  color: var(--primary-color);
+  text-align: center;
+  margin-top: 50px;
+}
+
+.text {
+  color: var(--font-color);
+  text-align: justify;
+  font-size: 14px;
+}
+
+.ab-hours-title {
+  color: var(--highlight-color);
+  font-size: 20px;
+  margin-top: 100px;
+  text-align: center;
+  margin-bottom: -40px;
+}
+
+.ab-hours-text {
+  color: var(--highlight-color);
+  font-size: 14px;
+  margin-top: 40px;
+  text-align: center;
+}
+
+.link-about {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
+.contact-button {
+  color: var(--font-color);
+  border: 1px solid var(--primary-color);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-button:hover {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
