--- a/src/style.css
+++ b/src/style.css
@@ -208,9 +208,20 @@ a {
 }
 
 .contact-button:hover {
+  transform: scaleX(1.1);
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
   padding: 10px;
   display: flex;
   justify-content: center;
+}
+
+.tech {
+  background-color: #2f3135;
+  border: 2px solid var(--primary-color);
+  border-radius: 10px;
+  padding: 15px;
+  margin-top: 60px;
+  box-shadow: 2px 8px 7px 0px rgba(102, 102, 102, 1);
+  color: var(--primary-color);
 }
