--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,38 @@ a {
 
 /* home page*/
 
+.hero {
+  background-image: url("/img/bg.png");
+  text-align: center;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+.home-contact {
+  font-size: 25px;
+  background-color: #e19397;
+  color: var(--secondary-color);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.home-contact:hover {
+  transform: scaleX(1.1);
+  color: var(--font-color);
+  border: 1px solid var(--primary-color);
+  padding: 10px;
+}
+
+.services {
+  color: var(--primary-color);
+  margin-top: 80px;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 20px;
+}
+
 /* about me page*/
 
 .about-box {
