--- a/src/style.css
+++ b/src/style.css
@@ -185,10 +185,17 @@ h3 {
 
 .services {
   color: var(--primary-color);
-  margin-top: 80px;
+  margin-top: 40px;
   font-size: 35px;
   font-weight: bold;
-  padding: 20px;
+  padding: 10px;
+}
+
+.contact {
+  color: var(--secondary-color);
+  background-color: #e19397;
+  text-align: center;
+  padding: 30px;
 }
 
 /* about me page*/
